# di-example-fastapi

./: Dockerfile  LICENSE.txt  README.md  constraints.txt  docker-compose.postgres.yml  docker-compose.redis.yml  docker-compose.yml  pyproject.toml
src/di_example_fastapi/: __about__.py  __init__.py  app.py  dependencies.py  models.py  schemas.py  settings.py
src/di_example_fastapi/routers/: offers.py
src/di_example_fastapi/services/offers/: __init__.py  base.py  factory.py  postgres.py  redis.py
tests/: conftest.py
tests/routers/: test_offers.py
